# lance-audio-demo

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
backend/: __init__.py  app.py
demo/: README.md  bunfig.toml  components.json  package.json  svelte.config.js  vite.config.ts
demo/src/: app.css  app.html
demo/src/lib/: audio-decoder.ts  audio-source.ts  models.ts  transcript.ts  wav.ts  webgpu.ts  worker.ts
demo/src/lib/components/: AudioVisualizer.svelte  AudioVisualizerChart.svelte  BatchPanel.svelte  ModelPicker.svelte  ProgressItem.svelte  RealtimePanel.svelte  Sidebar.svelte  ThemeToggle.svelte  TranscriptHistory.svelte  WorkInProgress.svelte
demo/src/lib/components/magic/: dot-pattern.svelte  index.ts  shimmer-button.svelte
demo/src/lib/components/ui/button/: button.svelte  index.ts
demo/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
demo/src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-group.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-trigger.svelte  index.ts
demo/src/lib/components/ui/progress/: progress.svelte
demo/src/lib/components/ui/select/: index.ts  select-content.svelte  select-item.svelte  select-trigger.svelte  select.svelte
demo/src/lib/components/ui/tabs/: tabs-content.svelte  tabs-list.svelte  tabs-trigger.svelte  tabs.svelte
demo/src/routes/: +layout.svelte  +layout.ts  +page.svelte
demo/src/routes/about/: +page.svelte
demo/src/routes/search/: +page.svelte
frontend/: gallery.html  index.html  package.json  server.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  feature-flags.svelte.ts  utils.ts
frontend/src/lib/components/: active-filters.svelte  doc-tile.svelte  filter-popover.svelte  help-popover.svelte  hit-card.svelte  hit-list.svelte  player-pane.svelte  resizable-split.svelte  search-bar.svelte  status-badge.svelte  theme-toggle.svelte  transcript-highlighter.svelte
frontend/src/lib/components/ui/: badge.svelte  button.svelte  card.svelte  checkbox.svelte  index.ts  input.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/raudio/: __init__.py  audio.py  cli.py  datamodel.py  detect_language.py  download.py  embeddings.py  frames.py  ingest.py  schema.py  search.py  thumbnails.py  transcribe.py
tools/: install-nvidia-toolkit.sh
tools/labeler/: README.md  labeler.ts
trocr-test/: baseline.py  bench.py  fast.py  fast_compiled.py  sweep.py  tc_check.py  tc_compare.py  trocr_fast.py
