[project]
name = "raudio"
version = "0.1.0"
description = "Lance table for easytranscriber AudioMetadata JSON — chunk-centric schema with embedded PCM audio, word-level alignments, and Tantivy FTS via LanceDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=21.0.0",
    "lancedb>=0.30.0",
    "msgspec>=0.21.1",
    "pylance>=4.0.0",
    "typer>=0.12.0",
    # FastAPI viewer backend. python-multipart is required for File/Form
    # parameters (POST /api/search image upload).
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    # Transcription stack. Torch pinned to a cu128 build: driver 570.x supports
    # up to CUDA 12.8, and cu130 wheels fail to initialize ("driver too old").
    "easytranscriber",
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
]

[project.optional-dependencies]
# Client-side multimodal extra. Used by:
#   - the embed-chunks / extract-chunk-frames / embed-chunk-frames CLI commands
#   - the FastAPI backend at query time (lazy-imported in src/raudio/embeddings.py)
# Talks HTTP to a vLLM server; doesn't run a model in-process, so no GPU is
# required to install this extra and no torch conflict with our cu128 pin.
multimodal = [
    "Pillow>=10.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "tqdm>=4.66",
]

# vLLM is NOT a project extra: its torch/torchaudio pins conflict with our
# cu128 versions. Run it instead via `uvx` (uv-managed ephemeral env) — see
# the `embed-server` and `rerank-server` Make targets. That keeps the main
# project resolvable and isolates the vLLM dependency tree.

[project.scripts]
raudio = "raudio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raudio", "backend"]
# Co-locate the vLLM reranker chat template with the only Python module that
# orchestrates the reranker (src/raudio/embeddings.py). Hatchling otherwise
# excludes non-.py files from the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/raudio/qwen3_vl_reranker.jinja" = "raudio/qwen3_vl_reranker.jinja"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
